--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="radioDev" lang="en">
+<html ng-app="radioApp" lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Radio UI Dev V1</title>
@@ -17,9 +17,9 @@
 		<div data-role="header" data-position="inline">
 			<h1>radio ui dev v1</h1>
 		</div>
-		<div ng-view data-role="content" data-theme="a" ng-controller="GetParametersController">
+		<div ng-view data-role="content" data-theme="a" ng-controller="RadioController">
 
-		
+
 			<button id="getParametersBtn">Get Parameters</button>
 			<button id="setParametersBtn">Set Parameters</button>
 
@@ -52,7 +52,7 @@
 	<script src="lib/angular.min.js"></script>
 	<!--  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script> -->
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
-	<script src="controllers/GetParametersController.js"></script>
+	<script src="controllers/RadioController.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
